--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -1,10 +1,10 @@
-name: ¹¹½¨ Recovery
+name: æ„å»º Recovery
 
 on:
   workflow_dispatch:
     inputs:
       MANIFEST_URL:
-        description: 'MANIFEST_URL (Èç¹ûÏëÊ¹ÓÃSSHÃÜÔ¿£¬ÇëÊ¹ÓÃ git@github.com:XXXXX)£¬°²×¿10ÒÔÉÏÉè±¸Ê÷£ºhttps://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp'
+        description: 'MANIFEST_URL (å¦‚æœæƒ³ä½¿ç”¨SSHå¯†é’¥ï¼Œè¯·ä½¿ç”¨ git@github.com:XXXXX)ï¼Œå®‰å“10ä»¥ä¸Šè®¾å¤‡æ ‘ï¼šhttps://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp'
         required: true
         default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni'
       MANIFEST_BRANCH:
@@ -24,10 +24,10 @@ on:
         required: true
         default: 'device/gionee/GIONEE_BBL7516A'
       COMMON_TREE_URL:
-        description: 'COMMON_TREE_URL (Èç¹ûÃ»ÓĞÍ¨ÓÃÉè±¸Ê÷£¬ÇëÁô¿Õ)'
+        description: 'COMMON_TREE_URL (å¦‚æœæ²¡æœ‰é€šç”¨è®¾å¤‡æ ‘ï¼Œè¯·ç•™ç©º)'
         required: false
       COMMON_PATH:
-        description: 'COMMON_PATH (Èç¹ûÃ»ÓĞÍ¨ÓÃÉè±¸Ê÷£¬ÇëÁô¿Õ)'
+        description: 'COMMON_PATH (å¦‚æœæ²¡æœ‰é€šç”¨è®¾å¤‡æ ‘ï¼Œè¯·ç•™ç©º)'
         required: false
       DEVICE_NAME:
         description: 'DEVICE_NAME'
@@ -148,6 +148,8 @@ jobs:
       run: |
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
+        set TARGET_SUPPORTS_64_BIT_APPS := ture
+        export TARGET_SUPPORTS_64_BIT_APPS := ture
         lunch ${{ github.event.inputs.MAKEFILE_NAME }}-eng && make clean && make ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
       working-directory: ${{ steps.pwd.outputs.workspace-folder }}
 
